# s3_utilities

./: .flake8  pyproject.toml
s3/: main.py  s3.py
tests/: test_s3.py
