[tool.poetry]
name = "jw-utilities"
version = "0.1.0"
description = ""
authors = ["Joyce W. <jianjoycewu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.29.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
moto = "^4.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
